Refactor implementation of fbld.
Instead of separating into frontends and backends and having the
frontends invoke the backends, use a single runfbld.tcl runner that
sources whatever tag processing scripts you provide.

Add some new document tags:
* @doc for top level docs.
* @item for list items.

Switch README, Tutorials, and the fbld spec from asciidoc to fbld syntax.

Now most of the links in the generated documentation work.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 
-* Improve html generated for tutorials
- - Fix issue with links between docs.
- - Add syntax highlighting for fble code blocks.
- - Make title h1, section h2, and subsection h3
+* Add man fbld backend and use it to replace fbld.usage.man.tcl.
+* Add roff fbld backend and use it to replace fbld.usage.help.tcl.
+* Clean up specification of dependencies for fbld generated docs.
+* Add syntax highlighting for fble code blocks.
 
 * Improve exercises for Unions tutorial.
 
