--- a/TODO.txt
+++ b/TODO.txt
@@ -6,11 +6,12 @@
   Because it looks a little funny in the tutorials for things to be
   highlighted in code blocks but not in inline text.
 
-* Fix missing dependency for .fbld processing on fbld.lang and fble.lang.
-
-* Add man fbld backend and use it to replace fbld.usage.man.tcl.
-* Add roff fbld backend and use it to replace fbld.usage.help.tcl.
 * Clean up specification of dependencies for fbld generated docs.
+ - Fix missing dependency for .fbld processing on fbld.lang and fble.lang.
+ - Maybe easiest to add a tcl proc for building fbld and encapsulate all the
+   dependencies there.
+
+* Add roff fbld backend and use it to replace fbld.usage.help.tcl.
 
 * Improve exercises for Unions tutorial.
 
