--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,4 @@
 
-* Write an fble-apt-profile tool that uses fble profiling to display apt
-  package dependencies for fble.
-
 * Add a style sheet for generated documentation?
   Because it looks pretty ugly reading the html right now.
 
@@ -14,7 +11,10 @@
  - Maybe easiest to add a tcl proc for building fbld and encapsulate all the
    dependencies there.
 
-* Improve exercises for Unions tutorial.
+* Change 'Function Bodies' section to 'Function Values' in Functions tutorial.
+ - And say somewhere that a function value is described using ...
+
+* Improve exercises for Unions and Functions tutorials.
 
 * Fix dependencies in tutorials/build.tcl.
   In particular, they all depend on the core library implementation.
