Fix bug in type checking.
List@<List@<Unit@>> was being considered equal to List@<List@<Bool@>>
when it shouldn't be. This is fixed now. Also fixes type inference for
Concat function, and gets rid of the annoying 'id' field of FbleType.

Unfortunately I don't think this is a complete solution. Will add a
test case I'm worried about soon.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 
-* Fix bug in type checker that things List@<List@<Unit@>> is equal to
-  List@<List@<Bool@>>.
+* Add test case for suspected bug in type checking with
+  L<T> = *(L<L<T>>);
 
 * Add way to do inline code syntax highlighting in fbld?
   Because it looks a little funny in the tutorials for things to be
