Don't allow recursive cyclic poly application in types.
In the hopes that with this restriction, type equality checking becomes
decidable.

The implementation is a work in progress. It needs some fixes and
cleanup still. Checking in the intermediate snapshot for the record.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,9 @@
 
+* Cleanup from change to type system
+ - Get all tests passing.
+ - Update tutorials.
+   Note that you need to use type lets for recursive function definitions.
+
 * Add test case for suspected bug in type checking with
   L<T> = *(L<L<T>>);
 
