Add option to enable/disable fble-app based build.
So it's easy to build without SDL/OpenGL.

Also, update build.ninja to generate itself from build.tcl instead of
configure, so we don't have to worry about reloading previously
configured values in configure.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,12 @@
+* Update documentation for how to enable/disable SDL/OpenGL dependencies.
+ - Decide whether fble-app should be enable by default or not.
+
+* Define '::app' as a namespace instead?
+ - Same with ::stdio, etc?
+
 * Release
  - Generate man pages for library functions via fbld.
  - Burn down TODOs.
- - Make SDL dependency optional.
  - Figure out how to make a release tarball.
  See thoughts/fble.release.txt
 
