--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
+* Include BUILDSTAMP in version info for all binaries.
 * Figure out a nice way to specify version number for 'dist' build target.
+* Double check we aren't using build_glob on source directories for dist_s
+  that include non-source dist files.
 
 * Update documentation for how to enable/disable SDL/OpenGL dependencies.
  - Add nice error message if SDL not installed when fble-app is enabled saying
