--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,9 @@
  Because this requires users to define BUILDSTAMP when they do their own
  compiles.
 
+* Double check why ninja www from dist doesn't think everything is up to date
+  by default.
+
 * Double check we aren't using build_glob on source directories for dist_s
   that include non-source dist files.
   For example: parse.tab.c could get picked up incorrectly if src dir used for
